--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,4 +1,4 @@
-name: Lastest Hashnode Blog Post
+name: Latest blog post workflow
 on:
   schedule:
     # Runs every hour
@@ -7,12 +7,11 @@ on:
 
 jobs:
   update-readme-with-blog:
-    name: Update this repo's README with latest Hashnode blog posts
+    name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          comment_tag_name: "HASHNODE"
-          commit_message: "Updated readme with the latest Hashnode Blog data"
-          feed_list: "https://technicallytony.com//rss.xml"
+          max_post_count: "4"
+          feed_list: "https://dev.to/feed/gautamkrishnar,https://technicallytony.com/rss.xml"
